# IF-Master

./: .env.example  .gitignore  00_context.md  01_기획서.md  02_개발문서.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  autopus.yaml  docker-compose.yml  render.yaml
.github/workflows/: keep-alive.yml  test.yml
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py  schemas.py
backend/app/db/: database.py  models.py
backend/app/routers/: auth.py  interfaces.py  logs.py  mock_router.py  performance.py  retry.py  stats.py  stream.py
backend/app/services/: mock_service.py  scheduler.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_export.py  test_health.py  test_idempotency.py  test_interfaces.py  test_logs.py  test_mock_distribution.py  test_performance.py  test_retry.py  test_sse_ping.py  test_stats.py
docs/: api-reference.md  architecture.md  demo-guide.md  design-20260419.md  feature-plan-v2.md  prd.md  step4-nextjs-plan.md  개발문서.md  기획서.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(main)/: layout.tsx
frontend/app/login/: page.tsx
frontend/components/: ConfirmDialog.tsx  FilterBar.tsx  InterfaceFormModal.tsx  LogTable.tsx  ProtocolBadge.tsx  RecentLogsTable.tsx  Sidebar.tsx  SlidePanel.tsx  StatsRow.tsx  StatusBadge.tsx  Topbar.tsx  TrafficChart.tsx
frontend/hooks/: useAuth.ts  useSSE.ts
frontend/lib/: api.ts  types.ts  utils.ts
(+4 files in other folders)
